Fixed navbar and title not aligned bug.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,7 @@ h1 {
   font-size: 150%;
   font-style: italic;
   display: block;
-  width: 100%;
+  /*width: 100%;*/
   border-bottom: 1px solid DarkSlateGrey;
 }
 h1.title {
